--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.0",
     "sass": "^1.69.5"
   },
